Fix some layout bugs in role detail screen
- grid-template-columns: 1fr causes the DetailsList measuring a wrong width
- The default utility `flex-1` which is `flex: 1 1 0%` causing unncessary vertical scrollbars to appear

--- a/portal/src/RoleAndGroupsLayout.module.css
+++ b/portal/src/RoleAndGroupsLayout.module.css
@@ -13,7 +13,7 @@
   @apply p-6;
 
   @apply grid gap-12;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   grid-template-rows: min-content minmax(min-content, 1fr);
 }
 
@@ -35,7 +35,7 @@
 .verticalForm {
   @apply w-full max-w-[360px];
   @apply grid gap-8;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   grid-auto-rows: min-content;
 
   @apply mobile:max-w-none;
