--- a/portal/src/components/roles-and-groups/RoleGroupsList.module.css
+++ b/portal/src/components/roles-and-groups/RoleGroupsList.module.css
@@ -1,12 +1,14 @@
 .root {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .listWrapper {
-  flex: 1 0 0%;
+  @apply flex-1;
   min-height: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .actionButton {
